--- a/hometasks/HT6/Hometask6.ipynb
+++ b/hometasks/HT6/Hometask6.ipynb
@@ -360,6 +360,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert data_train.shape == (1140, 2984)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "AiNGVzTveRXE"
